# jarat_gaz_project

./: CMakeLists.txt  README.md
src/: client.c  common.h  gps.c  gps.h  logger.c  logger.h  net.c  net.h  protocol.c  protocol.h  truck.c  util.c  util.h
tests/: test_all.cpp  test_distance.c  test_gps.c  test_protocol.c
ui/: app_ui.py
